cleaning angular templates

--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -1,4 +1,12 @@
 /* ---In All syte--- */
+[ng\:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak {
+  display: none !important;
+}
 body {
   padding-top: 100px;
 }
