--- a/profapp/templates/article/form.html
+++ b/profapp/templates/article/form.html
@@ -232,7 +232,7 @@
 
     {% raw %}
 
-    <div ng-init="init()" ng-controller="article_edit" class="create-material">
+    <div ng-init="init()" ng-controller="article_edit" ng-cloak class="create-material">
     <div class="row link-page create-new-material"><h5>{{ _(title) }}</h5></div></br>
         <form name="newMaterial">
             <!-- <h1 class="nice-title">{{ _(title) }}<span></span></h1> -->
