--- a/profapp/templates/auth/reset_password.html
+++ b/profapp/templates/auth/reset_password.html
@@ -5,7 +5,7 @@
 {% endblock head %}
 
 {% block portal_content %}
-    <div class="container" ng-controller="UserLoginController">
+    <div class="container" ng-controller="UserLoginController" ng-cloak>
         <div class="row link-page">
             <h5>Reset Your Password</h5>
         </div>
