--- a/profapp/templates/auth/reset_password_token.html
+++ b/profapp/templates/auth/reset_password_token.html
@@ -9,7 +9,7 @@
 {% endblock portal_base %}
 
 {% block portal_content %}
-<div ng-controller="UserLoginController">
+<div ng-controller="UserLoginController" ng-cloak>
 <div>
     <h1 class="nice-title">{{ '{{' }}_('Reset Your Password'){{ '}}' }}<span></span></h1>
 </div>
