--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -80,7 +80,7 @@
         });
     </script>
     {% raw %}
-    <div ng-controller="CompanyProfile">
+    <div ng-controller="CompanyProfile" ng-cloak>
         <div class="container list-form" af
              af-after-save="afterSave"
              af-after-load="afterLoad"
