--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -39,7 +39,7 @@
 
     {% raw %}
     <div ng-controller="edit_user" class="container">
-        <div af
+        <div ng-cloak af
              af-after-save="afterSave"
              af-amid-load="amidLoad" class="edit_user_profile" ng-model="data">
             <div class="row link-page">
