--- a/profapp/templates/portal/portal_create.html
+++ b/profapp/templates/portal/portal_create.html
@@ -39,7 +39,7 @@
     {% raw %}
 
 
-    <div ng-controller="portal_create">
+    <div ng-controller="portal_create" ng-cloak>
         <form name="formPortal">
         <div class="container list-form" af
              af-after-save="afterSave"
