--- a/profapp/templates/portal/portal_profile.html
+++ b/profapp/templates/portal/portal_profile.html
@@ -115,7 +115,7 @@
 
     </script>
     {% raw %}
- <div ng-init="loadData(null, null, null, loadPortalDivisionTags4)" ng-controller="PortalProfileController">
+ <div ng-cloak ng-init="loadData(null, null, null, loadPortalDivisionTags4)" ng-controller="PortalProfileController">
 
     <!-- !!!{{ data.PortalDivisionTagsName }}<br/><br/> -->
     <!-- {{ loadPortalDivisionTags2() }} -->
