--- a/profapp/templates/_ruslan/reader/_news.html
+++ b/profapp/templates/_ruslan/reader/_news.html
@@ -1,7 +1,7 @@
 {#TODO AA by OZ: pls remove explicit url. use url_for#}
 {% include '_ruslan/reader/_reader_nav.html' %}
 {% for article_id, article in articles.items() %}
-    <div class="block-item list-elements">
+    <div class="block-item list-elements" ng-cloak>
         <div class="item-type article">
             <a href="//{{ article['portal']['host']|safe }}/{{ article['division']['name'] }}/1/?search_text=">{{ article['division']['name']|safe }}</a>
         </div>
@@ -26,6 +26,7 @@
         <div class="bottom-hide"></div>
         <img src="//static.profireader.com/static/images/0.gif" class="block-item-img" style="background-image: url({{ fileUrl(article['image_file_id']) }})"/>
     </div>
+
 {% else %}
     {{ __('You dont have favorite articles') }}
 {% endfor %}
