--- a/profapp/templates/_ruslan/reader/_reader_nav.html
+++ b/profapp/templates/_ruslan/reader/_reader_nav.html
@@ -5,7 +5,7 @@
 </script>
 
 <div class="container">
-    <div class="row reader-list-nav menu-company ">
+    <div ng-cloak class="row reader-list-nav menu-company ">
         <div class="col-lg-12">
             <ul>
                 <li><a pr_test="UserNews" class="reader_button_list" href="{{ url_for('reader.list_reader') }}">{{ _('News') }}</a></li>
