--- a/profapp/templates/article/list.html
+++ b/profapp/templates/article/list.html
@@ -61,6 +61,7 @@
     {% endraw %}
     </script>
     {% raw %}
+    <div ng-cloak>
     <h1 class="nice-title">{{ _('Sorry this page is not avaible in this version. If you have unattached article pls contact with administrator') }}<span></span></h1>
     <div ng-controller="article_list">
         <h1 class="nice-title">{{ _('Article list') }}<span></span></h1>
@@ -68,6 +69,7 @@
         <a class="h1-btn icon icon-add" href="{{ url_create_article }}" title="{{ _('CREATE NEW ARTICLE') }}"><img src="//static.profireader.com/static/front/img/ico/articles.png" /></a>
         <div ng-if="!load_contr">{{_('Loading...')}}</div>
         <div id="grid1" ui-grid-edit ui-grid-grouping ui-grid-pagination ui-grid="gridOptions1"></div>
+    </div>
     </div>
     {% endraw %}
 {% endblock portal_content %}
