--- a/profapp/templates/auth/change_email.html
+++ b/profapp/templates/auth/change_email.html
@@ -5,16 +5,16 @@
 {% endblock head %}
 
 {% block portal_content %}
-<div ng-controller="UserLoginController">
+<div ng-controller="UserLoginController" ng-cloak>
 
     <h1 class="nice-title">{{ '{{' }}_('Change Your Email Address'){{ '}}' }}<span></span></h1>
 </div>
-<form action="{{ url_for('auth.change_email_request') }}" method="POST">
+<div ng-cloak><form action="{{ url_for('auth.change_email_request') }}" method="POST">
     {{ form.email(placeholder='yourname@email.com', maxlength="100", type="email") }} <br/>
     {{ form.password(placeholder="{{_('Password')}}") }} <br/>
     {{ form.submit(type="submit") }}
     {{ form.csrf_token }}
 </form>
-
-<p ng-controller="UserLoginController">{{ '{{' }}_('Forgot your password'){{ '}}' }}? <a href="{{ url_for('auth.password_reset_request') }}">{{ '{{' }}_('Click here to reset it'){{ '}}' }}</a>.</p>
+</div>
+<p ng-cloak ng-controller="UserLoginController">{{ '{{' }}_('Forgot your password'){{ '}}' }}? <a href="{{ url_for('auth.password_reset_request') }}">{{ '{{' }}_('Click here to reset it'){{ '}}' }}</a>.</p>
 {% endblock portal_content %}
