--- a/profapp/templates/company/bak_company_base.html
+++ b/profapp/templates/company/bak_company_base.html
@@ -1,4 +1,4 @@
-<div ng-controller="UserLoginController" class="topbar-menu-links">
+<div ng-controller="UserLoginController" class="topbar-menu-links" ng-cloak>
     <div ng-cloak ng-show="user.id">
         <a class="navbar-brand" href="{{ url_for('company.profile', company_id = company_id) }}"><img src="{{ company_logo }}" /></a>
         <a href="{{ url_for('company.profile', company_id = company_id) }}">{{ company_name }}??</a>
