--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -80,7 +80,7 @@
     </script>
     {% raw %}
 
-    <div class="container" ng-init="loadData()" ng-controller="companies_list">
+    <div class="container" ng-init="loadData()" ng-controller="companies_list" ng-cloak>
         <div class="row join-company">
             <div class="col-lg-3 create-company pull-right">
                 <button pr-test="CreateNewCompany" class="btn btn-default" type="button" ng-click='createCompany()'>{{
@@ -116,7 +116,8 @@
         <div class="list_search_company" ng-repeat="company in data_search.company_list" ng-if="selectedCompany_name">
             <div class="row search-result thumbnail">
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 photo-search">
-                    <a pr-test="CompanySearchResult" href="{{ url_company_profile({company_id: company.id}) }}" class="thumbnail">
+                    <a pr-test="CompanySearchResult" href="{{ url_company_profile({company_id: company.id}) }}"
+                       class="thumbnail">
                         <img pr-image="company.logo_file_id" alt="image" style="width: 100%">
                     </a>
                 </div>
@@ -128,20 +129,26 @@
                        title="http://{{ company.own_portal.host }}">{{ _('PORTAL') }}</a>
                 </div>
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 join-new-company">
-                    <button pr-test="JoinToCompany" class="btn btn-default" type="button" ng-click="joinToCompany(company.id)"
+                    <button pr-test="JoinToCompany" class="btn btn-default" type="button"
+                            ng-click="joinToCompany(company.id)"
                             ng-class="{'disabled': selectedCompany_sending}"
                             ng-disabled="selectedCompany_sending">{{ _('Join') }}
                     </button>
                 </div>
             </div>
         </div>
-        <div ng-if="data_search.company_list.length>0 && !data_search.end" class="show-more"><h4><a class="link" ng-click="show_more()">{{ _('Show more search results') }}</a></h4></div>
+        <div ng-if="data_search.company_list.length>0 && !data_search.end" class="show-more"><h4><a class="link"
+                                                                                                    ng-click="show_more()">{{
+            _('Show more search results') }}</a></h4></div>
         <div class="row company-list">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h3 ng-if="data.companies">Your company list:</h3><h2 ng-if="!data.companies && !loading">You haven't got any company yet!Create own or join to!</h2></div>
-            <div ng-if="data.companies" class="col-lg-4 col-md-4 col-sm-6 col-xs-6" ng-repeat="my_employer in data.companies" id="joined_company_{{ my_employer.id }}">
-                <div class="thumbnail company-thumbnail" >
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h3 ng-if="data.companies">Your company list:</h3>
+                <h2 ng-if="!data.companies && !loading">You haven't got any company yet!Create own or join to!</h2>
+            </div>
+            <div ng-if="data.companies" class="col-lg-4 col-md-4 col-sm-6 col-xs-6"
+                 ng-repeat="my_employer in data.companies" id="joined_company_{{ my_employer.id }}">
+                <div class="thumbnail company-thumbnail">
                     <a href="{{ url_company_profile({company_id: my_employer.id}) }}">
-                        <img pr-image="my_employer.logo_file_id" alt="image" style="width: 100%" >
+                        <img pr-image="my_employer.logo_file_id" alt="image" style="width: 100%">
                     </a>
                     <div pr-test="SomeCompanyInfo" class="caption some-company-info">
 
@@ -149,7 +156,8 @@
                                href="{{ url_company_profile({company_id: my_employer.id}) }}">
                             {{ _('%(name)s' , my_employer) }}
                         </a></h3>
-                        <p pr-test="JoinedCompany">{{ _((my_employer.author_user_id==data.user_id? ' Type: OWN COMPANY':'JOINED COMPANY') ,
+                        <p pr-test="JoinedCompany">{{ _((my_employer.author_user_id==data.user_id? ' Type: OWN
+                            COMPANY':'JOINED COMPANY') ,
                             my_employer) }}</p>
                         <span ng-if="!my_employer.own_portal.host"><b>{{_('Portals')}}: </b>{{_('No')}}</span>
                         <div ng-if="my_employer.own_portal.host">
