--- a/profapp/templates/company/companies_partners.html
+++ b/profapp/templates/company/companies_partners.html
@@ -14,74 +14,86 @@
 
 
     <script>
-    module.controller('company_partners',  function ($scope, $ok, $uibModal)  {
-        angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('companies_partners');
-        $scope.$$translate = {{translates('company_partners') | safe}};
-        $scope.url_companies_partners = '{{ url_for('portal.companies_partners_load', company_id=company.id)
+        module.controller('company_partners', function ($scope, $ok, $uibModal) {
+            angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('companies_partners');
+            $scope.$$translate = {{translates('company_partners') | safe}};
+            $scope.url_companies_partners = '{{ url_for('portal.companies_partners_load', company_id=company.id)
          }}';
-        $scope.url_company_partner_details = {{ raw_url_for('portal.company_partner_update')| safe}};
-        $scope.url_change_status = {{ raw_url_for('portal.portals_partners_change_status')|safe }};
-        $scope.url_company_profile = {{ raw_url_for('company.profile')|safe }};
+            $scope.url_company_partner_details = {{ raw_url_for('portal.company_partner_update')| safe}};
+            $scope.url_change_status = {{ raw_url_for('portal.portals_partners_change_status')|safe }};
+            $scope.url_company_profile = {{ raw_url_for('company.profile')|safe }};
 
-        {% raw %}
+            {% raw %}
 
-        $scope.portal_link = function(link){
-            if(link){
-                return 'http://' + link;
-            }else{
-                return null
-            }
-        };
+            $scope.portal_link = function (link) {
+                if (link) {
+                    return 'http://' + link;
+                } else {
+                    return null
+                }
+            };
 
-        $scope.grid_update_row = function (updated_row) {
+            $scope.grid_update_row = function (updated_row) {
                 console.log($scope, updated_row);
 //                    TODO: SS by OZ: how i can access grid data without data cariable in my scope?
                 $scope.grid_change_row($scope.data, updated_row);
-        };
+            };
 
-        $scope.grid_action = function (id, action, row, column_name) {
-            if(column_name == 'actions'){
-               if (action === 'ALLOW') {
-                    window.location.href = $scope.url_company_partner_details({
-                        employeer_id: row.company_id, member_id:row.member.company.id
-                    });
-                    return;
-                }else{
-                  if(row.actions[action] == true){
-                        return $ok($scope.url_change_status({partner_id:row.member.company.id, portal_id:row.portal_id}) ,{action:action, who:row.who,company_id:row.company_id}, function(resp){}).finally(function () {
-                            $scope.gridApi.grid.setGridData();
-                        })
-                   }else{
-                        add_message(row.actions[action], 'danger', 3000)
-                   }
-               }
-            }
-        };
+            $scope.grid_action = function (id, action, row, column_name) {
+                if (column_name == 'actions') {
+                    if (action === 'ALLOW') {
+                        window.location.href = $scope.url_company_partner_details({
+                            employeer_id: row.company_id, member_id: row.member.company.id
+                        });
+                        return;
+                    } else {
+                        if (row.actions[action] == true) {
+                            return $ok($scope.url_change_status({
+                                partner_id: row.member.company.id,
+                                portal_id: row.portal_id
+                            }), {action: action, who: row.who, company_id: row.company_id}, function (resp) {
+                            }).finally(function () {
+                                $scope.gridApi.grid.setGridData();
+                            })
+                        } else {
+                            add_message(row.actions[action], 'danger', 3000)
+                        }
+                    }
+                }
+            };
 
-        $scope.gridOptions1 = $.extend({}, $scope.gridOptions, {
-                        urlLoadGridData: $scope.url_companies_partners,
-                        columnDefs: [
-                             {name: 'member.company.name', type: 'link',img:'member.company.logo_file_id', href: 'portal_link(row.entity.member.company.own_portal.host)'},
-                             {name: 'member.status', filter: {type: 'multi_select',default_selected:true}},
-                             {name: 'member.rights', width: '200', type: 'icons', afilter: {type: 'input'}},
-                             {name: 'actions', width: '*', type: 'actions', onclick: 'grid_action', classes: function (id,
-                                                                     entity, field) {
-                                return entity.status !== 'ACTIVE' ? 'non-active' : '';
-                            }}
-                        ]
-                    });
-        {% endraw %}
-    })
+            $scope.gridOptions1 = $.extend({}, $scope.gridOptions, {
+                urlLoadGridData: $scope.url_companies_partners,
+                columnDefs: [
+                    {
+                        name: 'member.company.name',
+                        type: 'link',
+                        img: 'member.company.logo_file_id',
+                        href: 'portal_link(row.entity.member.company.own_portal.host)'
+                    },
+                    {name: 'member.status', filter: {type: 'multi_select', default_selected: true}},
+                    {name: 'member.rights', width: '200', type: 'icons', afilter: {type: 'input'}},
+                    {
+                        name: 'actions', width: '*', type: 'actions', onclick: 'grid_action', classes: function (id,
+                                                                                                                 entity, field) {
+                        return entity.status !== 'ACTIVE' ? 'non-active' : '';
+                    }
+                    }
+                ]
+            });
+            {% endraw %}
+        })
     </script>
 
     {% raw %}
 
-       <div ng-controller="company_partners">
+    <div ng-controller="company_partners" ng-cloak>
         <div class="grid" id="grid1" ui-grid-pagination ui-grid="gridOptions1">
             <div class="well grid-loading" ng-show="loading">
-              <i class="fa fa-spin fa-spinner"></i><div>{{ _('Data Loading...') }}</div>
+                <i class="fa fa-spin fa-spinner"></i>
+                <div>{{ _('Data Loading...') }}</div>
             </div>
         </div>
-        </div>
+    </div>
     {% endraw %}
 {% endblock portal_content %}
