--- a/profapp/templates/company/company_partner_details.html
+++ b/profapp/templates/company/company_partner_details.html
@@ -27,7 +27,7 @@
     </script>
     {% raw %}
 
-    <div  ng-controller="company_partner_details">
+    <div  ng-controller="company_partner_details" ng-cloak>
         <h2>
             <img class="person-small-cover" pr-image ="member.company.logo_file_id"/>
             <img class="logo-small-cover" pr-image="employeer.logo_file_id"/>
