--- a/profapp/templates/company/company_partner_update.html
+++ b/profapp/templates/company/company_partner_update.html
@@ -26,7 +26,7 @@
     </script>
     {% raw %}
 
-    <div ng-controller="company_partner_update">
+    <div ng-controller="company_partner_update" ng-cloak>
         <div af af-after-save="after_save" af-after-load="after_load" af-watch="data.member" ng-model="data">
             <div class="update-company-partner" ng-if="!data.errors && loading">
                 <h2><img class="person-small-cover" pr-image="data.member.company.logo_file_id"/><img
