--- a/profapp/templates/front/error.html
+++ b/profapp/templates/front/error.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Error</title>
 </head>
-<body>
+<body ng-cloak>
     <h1 style="text-align: center">{{ message }}</h1>
 </body>
 </html>
