--- a/profapp/templates/messenger/messenger.html
+++ b/profapp/templates/messenger/messenger.html
@@ -10,14 +10,14 @@
 {% endblock portal_base %}
 
 {% block portal_content %}
-<div class="container-fluid">
+<div class="container-fluid" ng-cloak>
 <div class="mess-bg row">
     <div class="msg-message-user">
         <h3>Messenger in develop</h3>
     </div>
 </div>
 </div>
-{#    <div class="container">#}
+{#    <div class="container" ng-cloak>#}
 {#        <div class="row link-page">#}
 {#            <h5>Messenger</h5>#}
 {#        </div>#}
