--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -62,7 +62,7 @@
                     <div pr-test="AddToFavoriteButton" style="cursor: pointer"
                          class="col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-lg-5 col-md-5 col-sm-5 col-xs-5"
                          ng-click="add_to_favorite(article)">
-                        <i ng-if="!article.is_favorite" class="fa fa-heart-o"></i><i ng-if="article.is_favorite"
+                        <i pr-like="NotFavorite" ng-if="!article.is_favorite" class="fa fa-heart-o"></i><i pr-like="IsFavorite" ng-if="article.is_favorite"
                                                                                      class="fa fa-heart"></i> {{
                         _('Favorite') }}
                     </div>
