--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -65,12 +65,12 @@
 
                 <form class="col-lg-8 col-md-8 col-sm-8 col-xs-8 edit-grup">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your first name *') }}</span>
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your first name') }}</span>
                         <input pr-validation-answer="data_validation:profireader_first_name" class="form-control" aria-describedby="sizing-addon1" type="text"
                                placeholder="first name" ng-model="data.user.profireader_first_name">
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
-                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your last name *') }}</span>
+                        <span class="input-group-addon" id="sizing-addon1">{{ _('Your last name') }}</span>
                         <input pr-validation-answer="data_validation:profireader_last_name" class="form-control" aria-describedby="sizing-addon1" type="text"
                                placeholder="last name"
                                ng-model="data.user.profireader_last_name">
