--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -142,38 +142,38 @@
                         </ul>
                         <div class="edit-block" ng-if="editing">
 
-                            <form name="formCompany">
+                            <form oles_name="formCompany">
 
                                 <div class="col-lg-2">{{ _('Name:') }}</div>
                                 <div class="col-lg-10 edit-data">
-                                    <input pr-validation-answer="data_validation:name" type="text"
+                                    <input pr-validation-answer="data_validation:name" oles_type="text"
                                            class="form-control border-radius"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="company.name"
-                                           name="company_name" ng-pattern="/[\wа-яёі']{3}/">
+                                           oles_name="company_name" oles_oles_ng-pattern="/[\wа-яёі']{3}/">
                                     <div ng-show="formCompany.company_name.$error.pattern" class="error-input">The
                                         company name should be longer!</div>
                                 </div>
 
                                 <div class="col-lg-2">{{ _('Country:') }}</div>
                                 <div class="col-lg-10 edit-data">
-                                    <input pr-validation-answer="data_validation:country" type="text"
+                                    <input pr-validation-answer="data_validation:country" oles_type="text"
                                            class="form-control border-radius"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.country"
-                                           name="company_country" ng-pattern="/[\wа-яёі]{2}/">
+                                           oles_name="company_country" oles_ng-pattern="/[\wа-яёі]{2}/">
                                     <div ng-show="formCompany.company_country.$error.pattern" class="error-input">The
                                         country name should be longer!</div>
                                 </div>
                                 <div class="col-lg-2">{{ _('Region:') }}</div>
                                 <div class="col-lg-10 edit-data">
-                                    <input pr-validation-answer="data_validation:region" type="text"
+                                    <input pr-validation-answer="data_validation:region" oles_type="text"
                                            class="form-control border-radius"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.region">
                                 </div>
                                 <div class="col-lg-2">{{ _('City:') }}</div>
                                 <div class="col-lg-10 edit-data">
-                                    <input pr-validation-answer="data_validation:city" type="text"
-                                           class="form-control border-radius" name="company_city"
-                                           ng-pattern="/[\wа-яёі]{2}/"
+                                    <input pr-validation-answer="data_validation:city" oles_type="text"
+                                           class="form-control border-radius" oles_name="company_city"
+                                           oles_ng-pattern="/[\wа-яёі]{2}/"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.city">
                                     <div ng-show="formCompany.company_city.$error.pattern" class="error-input">The city
                                         name should be longer!
@@ -182,10 +182,10 @@
                                 </div>
                                 <div class="col-lg-2">{{ _('Postcode:') }}</div>
                                 <div class="col-lg-10 edit-data">
-                                    <input pr-validation-answer="data_validation:postcode" type="number"
-                                           class="form-control border-radius" ng-pattern="/[0-9]{3}/"
+                                    <input pr-validation-answer="data_validation:postcode" oles_type="number"
+                                           class="form-control border-radius" oles_ng-pattern="/[0-9]{3}/"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.postcode"
-                                           name="company_postcode">
+                                           oles_name="company_postcode">
                                     <div ng-show="formCompany.company_postcode.$error.pattern" class="error-input">The
                                         postcode should be longer!
                                     </div>
@@ -193,10 +193,10 @@
                                 </div>
                                 <div class="col-lg-2">{{ _('Address:') }}</div>
                                 <div class="col-lg-10 edit-data">
-                                    <input pr-validation-answer="data_validation:address" type="text"
-                                           class="form-control border-radius" ng-pattern="/[\wа-яёі\0-9]{4}/"
+                                    <input pr-validation-answer="data_validation:address" oles_type="text"
+                                           class="form-control border-radius" oles_ng-pattern="/[\wа-яёі\0-9]{4}/"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.address"
-                                           name="company_address">
+                                           oles_name="company_address">
                                     <div ng-show="formCompany.company_address.$error.pattern" class="error-input">The
                                         address should be longer!
                                     </div>
@@ -204,10 +204,10 @@
                                 </div>
                                 <div class="col-lg-2">{{ _('Phone:') }}</div>
                                 <div class="col-lg-10 edit-data">
-                                    <input pr-validation-answer="data_validation:phone" type="number" ng-maxlength="12"
-                                           class="form-control border-radius" ng-pattern="/[0-9]{6}/"
+                                    <input pr-validation-answer="data_validation:phone" oles_type="number" ng-maxlength="12"
+                                           class="form-control border-radius" oles_ng-pattern="/[0-9]{6}/"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.phone"
-                                           name="company_phone">
+                                           oles_name="company_phone">
                                     <div ng-show="formCompany.company_phone.$error.pattern" class="error-input">The
                                         phone should be longer!
                                     </div>
@@ -215,17 +215,17 @@
                                 </div>
                                 <div class="col-lg-2">{{ _('Fax:') }}</div>
                                 <div class="col-lg-10 edit-data">
-                                    <input pr-validation-answer="data_validation:phone2" type="number"
-                                           class="form-control border-radius" name="company_phone2"
+                                    <input pr-validation-answer="data_validation:phone2" oles_type="number"
+                                           class="form-control border-radius" oles_name="company_phone2"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.phone2">
                                 </div>
                                 <div class="col-lg-2">{{ _('Email:') }}</div>
                                 <div class="col-lg-10 edit-data">
-                                    <input pr-validation-answer="data_validation:email" type="text"
+                                    <input pr-validation-answer="data_validation:email" oles_type="text"
                                            class="form-control border-radius"
-                                           ng-pattern="/[0-9a-z_]+@[0-9a-z_]+\.[a-z]{2,5}/"
+                                           oles_ng-pattern="/[0-9a-z_]+@[0-9a-z_]+\.[a-z]{2,5}/"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.email"
-                                           name="company_email">
+                                           oles_name="company_email">
                                     <div ng-show="formCompany.company_email.$error.pattern" class="error-input">The
                                         email not validate!
                                     </div>
@@ -233,16 +233,16 @@
                                 </div>
                                 <div class="col-lg-3">{{ _('Lang and Long:') }}</div>
                                 <div class="col-lg-4 edit-data">
-                                    <input pr-validation-answer="data_validation:lat" type="number"
+                                    <input pr-validation-answer="data_validation:lat" oles_type="number"
                                            class="form-control border-radius"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.lat"
-                                           name="company_lat">
+                                           oles_name="company_lat">
                                 </div>
                                 <div class="col-lg-4 edit-data">
-                                    <input pr-validation-answer="data_validation:lon" type="number"
+                                    <input pr-validation-answer="data_validation:lon" oles_type="number"
                                            class="form-control border-radius"
                                            id="basic-url" aria-describedby="basic-addon3" ng-model="data.lon"
-                                           name="company_lon">
+                                           oles_name="company_lon">
                                 </div>
 
                         </div>
