--- a/profapp/templates/front/bird/head.html
+++ b/profapp/templates/front/bird/head.html
@@ -35,37 +35,5 @@
 <script src="//static.profireader.com/static/jquery/jquery.min.js"></script>
 <script src="//static.profireader.com/static/jquery/jquery-ui.min.js"></script>
 
-<script type="text/javascript">
-    //jQuery to collapse the navbar on scroll
-    $(window).scroll(function () {
-        if ($(".navbar").offset().top > 120) {
-            $('nav.navbar-fixed-top').addClass("top-nav-collapse");
+<script src="//static.profireader.com/static/js/front.js"></script>
 
-            {#        $(".social-block").addClass("top-nav-collapse");#}
-            {#        $(".navbar").addClass("top-nav-collapse");#}
-
-
-        } else {
-            {#        $(".social-block").removeClass("top-nav-collapse");#}
-            $("nav.navbar-fixed-top").removeClass("top-nav-collapse");
-        }
-    });
-
-    //jQuery for page scrolling feature - requires jQuery Easing plugin
-    $(function () {
-        $('a.page-scroll').bind('click', function (event) {
-            var $anchor = $(this);
-            $('html, body').stop().animate({
-                scrollTop: $($anchor.attr('href')).offset().top
-            }, 1500, 'easeInOutExpo');
-            event.preventDefault();
-        });
-    });
-</script>
-
-<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-<![endif]-->
