--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -50,7 +50,7 @@
                    return '{{ url_for('general.index')|safe }}'}
                 };
 
-                        $scope.url_company_show = {{ raw_url_for('company.show')|safe }}
+                        $scope.url_company_companies = {{ raw_url_for('company.companies')|safe }}
                                 $scope.url_general_help = {{ raw_url_for('general.help')|safe }}
                                         $scope.url_auth_logout = {{ raw_url_for('auth.logout')|safe }}
                                                 $scope.url_user_profile = {{ raw_url_for('user.profile')|safe }}
@@ -111,8 +111,8 @@
                         <li ng-if="user.id"><a pr_test="UserMassages" href="{{ url_messenger }}" title="{{ _('Всі повідомлення') }}"
                                ng-class="{'selected': selected_user_menu == 'messages'}"><i
                                 class="fa fa-envelope-o"></i></a></li>
-                        <li ng-if="user.id"><a pr_test="CompaniesList" href="{{ url_company_show() }}" title="{{ _('Компанії') }}"
-                               ng-class="{'selected': selected_user_menu == 'companies_list'}"><i
+                        <li ng-if="user.id"><a pr_test="CompaniesList" href="{{ url_company_companies() }}" title="{{ _('Компанії') }}"
+                               ng-class="{'selected': selected_user_menu == 'companies'}"><i
                                 class="fa fa-building-o"></i></a></li>
                         <li ng-if="user.id"><a pr_test="FileManeger" href="{{ login_or_none_href() }}" ng-click="open_filemanager()" title="{{ _('Менеджер файлів') }}"
                                ng-class="{'selected': selected_user_menu == 'file_manager'}"><i
