--- a/profapp/templates/partials/article_details_actions.html
+++ b/profapp/templates/partials/article_details_actions.html
@@ -1,6 +1,7 @@
 <div class="row" style="border-bottom: 1px solid #000;padding-bottom: 5px;">
     <div class="item-company col-lg-4 col-md-4 col-sm-4 col-xs-4"><a
-            href="//profireader.com/company/profile/{{ article['company']['id'] }}">
+            href="{{ url_for('front.subportal', member_company_id = article['company']['id'], member_company_name =
+            article['company']['name']) }}">
         {{ article['company']['name']|safe }}</a>
     </div>
 
