--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -106,7 +106,7 @@
                         <li ng-if="user.id"><a pr_test="ReadLine" href="{{ url_list_reader() }}" title="{{ _('Стрічка
                         читача')
                          }}"
-                               ng-class="{'selected': selected_user_menu == 'line_readers'}"><i
+                               ng-class="{'selected': selected_user_menu == 'list_reader'}"><i
                                 class="fa fa-newspaper-o"></i></a></li>
                         <li ng-if="user.id"><a pr_test="UserMassages" href="{{ url_messenger }}" title="{{ _('Всі повідомлення') }}"
                                ng-class="{'selected': selected_user_menu == 'messages'}"><i
