--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -6,16 +6,17 @@
     <script>
 
         module.controller('list_reader', function ($scope, $ok, $timeout) {
+            angularControllerFunction('UserLoginController', 'set_selected_user_menu')('list_reader');
             $scope.$$translate = {{ translates('list_reader')|safe }};
             $scope.favorite = {{ favorite }}
-                    $scope.favorite ? addToMenu_Selected('favorite') : addToMenu_Selected('list');
+            $scope.favorite ? addToMenu_Selected('favorite') : addToMenu_Selected('list');
             $scope.add_delete_favorite = '{{ url_for('reader.add_delete_favorite') }}'
-            {#    into this function put url    #}
             $scope.add_to_favorite = function (article) {
+                article.is_favorite = article['is_favorite']? False: True
                 $ok($scope.add_delete_favorite, {'article': article}, function (resp) {
                     article.is_favorite = resp
                 })
-            }
+            };
             $scope.loadNextPage('')
 
         });
