--- a/profapp/templates/article/form.html
+++ b/profapp/templates/article/form.html
@@ -240,6 +240,12 @@
             <div af af-amid-load="amidLoad" af-amid-save="amidSave" af-before-save="getData"
                  af-beforeValidate="getData" af-watch="data.article" ng-model="data">
 
+                <div style="padding-bottom: 50px">
+                    <div>
+                        <div style="width: 400px; height: 300px; position: relative" pr-crop="data.article.image"></div>
+                    </div>
+                </div>
+
                 <div class="update_col1">
                     <!-- TODO: OK by OZ:   this block form should share same classes with layout to look MAXIMUM like in portal
                                             maybe layout selector is apporpriate here-->
@@ -260,12 +266,6 @@
                     <div ng-show="newMaterial.article_keywords.$error.pattern" class="error-input">
                         The keywords should be longer!
                     </div>
-                </div>
-
-
-                <div class="update_col1">
-                    {{ _('Select picture') }}
-                    <div ng-model="data.image" pr-cropper pr-company-id="{{ data.article.company.id }}"></div>
                 </div>
 
 
