fix bug in help_page

--- a/profapp/templates/help.html
+++ b/profapp/templates/help.html
@@ -23,7 +23,7 @@
     });
 </script>
     {% raw %}
-    <div class="helpmessage" ng-controller="helpmessage">
+    <div class="helpmessage row" ng-controller="helpmessage">
         <div class="link-page" ng-cloak>
             <h5>{{ _('Help page') }}</h5>
         </div>
