user menu(selected func)

--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -74,6 +74,7 @@
         $scope.selected_user_menu = '';
         $scope.set_selected_user_menu = function (menu_item) {
             $timeout(function () {
+                console.log(menu_item)
                 $scope.selected_user_menu = menu_item;
             }, 0);
         };
